<resources>
    <string name="app_name">VortexChat</string>
    <string name="title_home">Chats</string>
    <string name="title_global_chat">Global Chat</string>
    <string name="title_profile">Profile</string>
    <!--Sign Up-->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="logo_content_description">This is logo of the app</string>
    <string name="have_account_text_view">Already have an account?</string>
    <!--Sign In-->
    <string name="dont_have_account_text_view">Don\'t have an account?</string>
    <string name="sign_in_button_text">Sign In</string>
    <!--Errors and messages-->
    <string name="login_success_message">Login success</string>
    <string name="error_signup">Sign up error</string>
    <string name="error_signin">Sign in error</string>
    <string name="error_signout">Sign out error</string>
    <string name="error_reset_password">Password reset error</string>
    <string name="sign_up_success_message">Sign up success</string>
    <string name="sign_out_success_message">Sign out success</string>
    <string name="reset_password_success_message">Reset email sent</string>
    <string name="error_empty_email">Email should not be empty</string>
    <string name="error_empty_password">Password should not be empty</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="reset_password_button">Forgot password?</string>
    <string name="return_button">Back</string>
    <string name="enter_reset_password_email">Enter your user account\'s email address and we will send you a password reset link.</string>
    <string name="reset_password_button_send_email">Reset password</string>

    <string name="profile_photo_no_image_description">Profile picture (not set)</string>
    <string name="profile_photo_image_description">Profile picture</string>
    <string name="chat_list_display_name">Username</string>
    <string name="chat_list_last_message">Last message</string>
    <string name="profile_pic_upload_fail">Upload error</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="username_label">Username</string>
    <string name="username_description">This name will be seen by all VortexChat users</string>
    <string name="email_label">Email</string>

    <string name="dialog_input_field_hint">Enter your message…</string>
    <string name="send_button_content_description">Send</string>

    <string name="last_message_placeholder">Hello! I\'m using VortexChat</string>

    <string name="message_hint">Message</string>
</resources>