<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerInside"
        android:cropToPadding="true"
        android:background="@color/transparent"
        android:src="@drawable/avatar3"
        android:contentDescription="@string/profile_photo_no_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chat_list_display_name"
        android:textSize="14sp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chat_list_last_message"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/username" />


</androidx.constraintlayout.widget.ConstraintLayout>