<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".ui.login.reset_password.ResetPasswordFragment">

    <ImageView
        android:id="@+id/vortex_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/yellow_vortex_final_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />


    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/yellow"
        android:textColorHint="@color/transparent_yellow"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:startIconDrawable="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_message_textview" />

    <TextView
        android:id="@+id/reset_message_textview"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginVertical="8dp"
        android:text="@string/enter_reset_password_email"
        android:textColor="@color/yellow"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/textview_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vortex_logo" />

    <Button
        android:id="@+id/reset_password_button_on_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/reset_password_button_send_email"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:strokeColor="@color/yellow"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/return_button"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_button_on_email"
        app:layout_constraintStart_toStartOf="@+id/reset_password_button_on_email"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_button_on_email"
        app:strokeColor="@color/yellow"
        app:strokeWidth="2dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>