<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".ui.login.sign_in.SignInFragment">

    <ImageView
        android:id="@+id/vortex_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/yellow_vortex_final_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />


    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/yellow"
        android:textColorHint="@color/transparent_yellow"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:startIconDrawable="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vortex_logo" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHint="@color/transparent_yellow"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <TextView
        android:id="@+id/have_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account_text_view"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        android:padding="4dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:textColor="@color/yellow"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_account_button"
        app:strokeColor="@color/yellow"
        app:strokeWidth="2dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        android:textColor="#E53935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>