<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/global_chat_fragment"
    tools:context=".ui.global_chat.GlobalChatFragment"
    android:layout_marginBottom="52dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/messageTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/global_chat_recycler_view"
        tools:listitem="@layout/list_item_dialog_left"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageTextField"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_button"
        app:layout_constraintStart_toStartOf="parent"

        android:hint="@string/dialog_input_field_hint"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:hint="@string/message_hint"
            android:textColorHint="@color/dim_white"
            android:background="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        app:cornerRadius="8dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/dim_yellow"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:icon="@drawable/ic_send"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/dim_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/messageTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/messageTextField"
        android:contentDescription="@string/send_button_content_description" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/yellowVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>