<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_fragment"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:cropToPadding="true"
        android:background="@color/transparent"
        android:src="@drawable/ic_avatar"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_photo_no_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:cropToPadding="true"
        android:background="@drawable/stroke_circle"
        android:src="@drawable/ic_camera_profile"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="@id/profile_photo"
        app:layout_constraintBottom_toBottomOf="@id/profile_photo"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ic_username"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_username_profile"
        android:contentDescription="@string/profile_photo_no_image_description"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/username_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/sign_out_button"
        app:cornerRadius="8dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/dim_yellow"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username_label"
        android:textSize="13sp"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/profile_photo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username_label"
        android:textSize="17sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/username_label" />

    <TextView
        android:id="@+id/username_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username_description"
        android:textSize="12sp"
        android:textColor="@color/dim_white"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/yellowVariant"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/username_description"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="321dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ic_email"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_mail"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/email_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email_label"
        android:textSize="13sp"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email_label"
        android:textSize="17sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/yellowVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp" />
</androidx.constraintlayout.widget.ConstraintLayout>